<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up"><u>Sign Up for Facebook</u></string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="help">\?</string>
    <string name="facebook">facebook</string>

</resources>
