<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/radial_gradient"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/facebook"
        android:textSize="60dp"
        android:id="@+id/facebookLogo"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:id="@+id/emailAddress"
        android:layout_above="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:id="@+id/password"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_up"
        android:textSize="18dp"
        android:id="@+id/signUpLink"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/helpButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpButton"
        android:background="@drawable/rounded_button"
        android:text="@string/help"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
